Menambahkan sorting tahun

--- a/sewa-mobil.html
+++ b/sewa-mobil.html
@@ -142,7 +142,7 @@
                     <button
                       class="btn text-white"
                       type="submit"
-                      style="background-color: #5cb85f"
+                      style="background-color: #5cb85f;"
                     >
                       Cari Mobil
                     </button>
@@ -160,9 +160,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-md-10">
             <div class="row mb-4">
-              <div class="col-lg-3" id="tempatFilter">
-                
-              </div>
+              <div class="col-lg-3" id="tempatFilter"></div>
             </div>
 
             <div class="row" id="car-rent">
