--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container" style="margin-bottom: 100px">
         <div class="row mb-md-5">
           <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="index.html"
               ><div
                 style="width: 100px; height: 34px; background-color: #0d28a6"
               ></div
