--- a/sewa-mobil.html
+++ b/sewa-mobil.html
@@ -12,7 +12,7 @@
       <div class="container" style="margin-bottom: 100px">
         <div class="row mb-md-5">
           <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="index.html"
               ><div
                 style="width: 100px; height: 34px; background-color: #0d28a6"
               ></div
@@ -142,7 +142,7 @@
                     <button
                       class="btn text-white"
                       type="submit"
-                      style="background-color: #5cb85f;"
+                      style="background-color: #5cb85f"
                     >
                       Cari Mobil
                     </button>
